Literally just fixed all the text by adding overflow:  auto property to about_us.css.sass and article.css.sass, also changed picture on about_us.html.erb

--- a/site/css/about_us.css.sass
+++ b/site/css/about_us.css.sass
@@ -26,11 +26,13 @@
     background-color: #9B9B9B
 
 .about-us-description
-    font-size: 17px
+    font-size: 2.5vmax
     margin-top: 10px
     margin-right: 15px
+    overflow: auto
     
     width: auto
+    height: auto
 
 @media only screen and (min-device-width: 768px)
     .about-us
@@ -42,8 +44,11 @@
 
     .about-us-image
         display: block
-        width: 350px
-        height: 200px
+        width: 60%
+        height: 50%
+
+        max-width: 500px
+        max-height: 300px
         align-self: center
         margin-top: 2%
         border-radius: 15px
@@ -56,6 +61,8 @@
         margin-left: 10%
 
     .about-us-description
-        font-size: 16px
+        font-size: 28px !important
         margin-top: 2%
         text-align: center
+        margin-right: 7%
+        margin-left: 7%
