--- a/site/css/article.css.sass
+++ b/site/css/article.css.sass
@@ -14,12 +14,13 @@
         align-self: center
 
         width: 75%
-        height: 35%
+        height: 40%
 
         margin-top: 20px
         border-radius: 15px
         background-position: center
         background-repeat: no-repeat
+        background-size: cover
         
 
     .am1
@@ -43,6 +44,8 @@
         margin: 15px
         margin-left: 20px
         align-self: center
+        overflow: auto
+        font-size: 18px
 
 @media only screen and (min-device-width: 768px)
     .article
@@ -60,12 +63,13 @@
         margin-top: 4% !important
 
     .article-description
-        font-size: 32px
+        font-size: 32px !important
         margin: 4% 4% !important
         text-align: center
 
     .am1
         background-image: url(../img/d_article_1.jpg) !important
+        width: 50% !important
     
     .am2
         background-image: url(../img/d_article_2.jpg) !important
